force-app/main/default/objects/Consulting_Service__c/Consulting_Service__c.object-meta.xml
<CustomObject>
    <label>Consulting Service</label>
    <nameField>
        <displayFormat>Record- {00}</displayFormat>
        <label>Consulting Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consulting Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>