force-app/main/default/objects/Consulting_Service__c/fields/Projected_Project_Start__c.field-meta.xml
<CustomField>
    <fullName>Projected_Project_Start__c</fullName>
    <label>Projected Project Start</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 Month</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>12-24 Months</fullName>
            </value>
            <value>
                <fullName>24+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>